--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,10 +16,11 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: "setup java"
       - uses: actions/setup-java@v3
         with:
-        distribution: 'temurin' # See 'Supported distributions' for available options
-        java-version: '17'
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
       - name: "run java"
       - run: javac HelloWorldApp.java
       - run: java HelloWorldApp.java
