--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,11 +16,11 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      - name: "setup java"
+      - name: Setup java
       - uses: actions/setup-java@v3.6.0
         with:
           distribution: 'temurin'
           java-version: '17'
-      - name: "run java"
+      - name: Run Java
       - run: javac HelloWorldApp.java
       - run: java HelloWorldApp.java
