--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,10 +17,8 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: Setup java
-      - uses: actions/setup-java@v3.6.0
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Run Java
-      - run: javac HelloWorldApp.java
-      - run: java HelloWorldApp.java
+          java-version: '11'
+          distribution: 'adopt'
