--- a/.github/workflows/matrix-attempt.yml
+++ b/.github/workflows/matrix-attempt.yml
@@ -21,5 +21,5 @@ jobs:
           java-package: jdk # optional (jdk, jre, jdk+fx or jre+fx) - defaults to jdk
 
       - name: Verify with Maven
-        run: javac HelloWorldApp.java
-        run: java HelloWorldApp
+      - run: javac HelloWorldApp.java
+      - run: java HelloWorldApp
